# rust-osm-pbf-iter

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml  tests.yml
src/: blob.rs  blob_reader.rs  delimited.rs  delta.rs  lib.rs  parse.rs  parse_dense.rs
src/parse/: dense_info.rs  dense_nodes.rs  info.rs  mod.rs  node.rs  primitive_block.rs  relation.rs  tags.rs  way.rs
tests/: integration_test.rs
tests/data/: 64bit_ids.osm.pbf  64bit_ids.xml  README.md  multipolygon.osm.pbf  multipolygon.xml  tag_lengths.osm.pbf  tag_lengths.xml  two_primitive_groups.osm.pbf  two_primitive_groups.xml
