[package]
name = "osm_pbf_iter"
version = "0.1.0"
authors = ["Astro <astro@spaceboyz.net>"]
license = "GPL-3.0"
description = "Parse OpenStreetMap .pbf dumps while trying to avoid copying"

[profile.release]
debug = true
lto = true
opt-level = 3

[dependencies]
byteorder = "1.3.2"
flate2 = { version = "1.0.9", features = ["zlib"], default-features = false }
num_cpus = "1.10.1"
protobuf_iter = "0.1.1"
# protobuf_iter = { path = "../rust-protobuf-iter" }
