[package]
name = "osm_pbf_iter"
version = "0.2.0"
authors = ["Astro <astro@spaceboyz.net>"]
license = "GPL-3.0"
description = "Parse OpenStreetMap .pbf dumps while trying to avoid copying"
documentation = "https://docs.rs/osm_pbf_iter/"
repository = "https://github.com/astro/rust-osm-pbf-iter/"

[profile.release]
debug = true
lto = true
opt-level = 3

[dependencies]
byteorder = "1"
libdeflater = "1"
num_cpus = "1"
protobuf_iter = ">= 0.1.2"
